syntax = "proto3";

import "cloudstate/entity_key.proto";
import "google/api/annotations.proto";

package stockupdate;

option go_package = "github.com/LunaYin/StockUpdate/stockupdate;stockupdate";

message AggregateStockLevel {
    string Action = 1 [(.cloudstate.entity_key) = true];
    string StoreUid = 2;
    int32 StockLevel = 3;
}
message GetStockLevel {
    string Action = 1 [(.cloudstate.entity_key) = true];
}

message StockLevel {
    string StoreUid = 1;
    int32 StockLevel = 2;
}

message AllStockLevels {
    repeated StockLevel Allstocklevels  = 1;
}

service StockUpdateService {
    rpc GetStocks (GetStockLevel) returns (StockLevel) {
        option (google.api.http) = {
            get: "/stocks/get"
        };
    };
    rpc AggregateStock (AggregateStockLevel) returns (AllStockLevels) {
        option (google.api.http) = {
            post: "/stocks/{Action}",
            body: "*",
        };
    };
}
